--- a/info/info.css
+++ b/info/info.css
@@ -45,4 +45,50 @@ img{
 .panel{
     width: 100%;
     height: 75vh;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.content{
+    width: 50%;
+    height: 90%;
+    background-color: beige;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    flex-direction: column;
+}
+
+.first{
+    justify-content: center;
+}
+
+p{
+    margin: 1%;
+}
+
+h1{
+    color: #18153d;
+    font-family: system-ui;
+}
+
+mark{
+    background-color: #c7c7c7;
+}
+
+.grid-content{
+    width: 50%;
+    height: 90%;
+    background-color: beige;
+    border-radius: 2rem;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+}
+
+h1.grid-content{
+    grid-row: 1;
+    grid-column: 3 / span 2;
 }
