--- a/info/info.css
+++ b/info/info.css
@@ -1,3 +1,4 @@
+@import url(https://db.onlinewebfonts.com/c/a163d087c4bfdff182eb1b4fcc595798?family=Sansation+Light);
 body{
     margin:0;
     min-height: 100%;
@@ -17,6 +18,8 @@ body{
 }
 
 .wrapper {
+    font-family: "Sansation Light";
+    font-size: large;
     height: 100rem;
     background: url("../resources/background.jpg") no-repeat center;
     background-size: cover;
@@ -48,12 +51,13 @@ img{
     display: flex;
     align-items: center;
     justify-items: center;
+    justify-content: space-around;
 }
 
 .content{
-    width: 50%;
+    width: 35%;
     height: 90%;
-    background-color: beige;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -79,16 +83,89 @@ mark{
 }
 
 .grid-content{
-    width: 50%;
+    width: 35%;
     height: 90%;
-    background-color: beige;
+    background-color: white;
     border-radius: 2rem;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 15% 15% 15% 15%;
 }
 
-h1.grid-content{
+h1{
+    margin: 0;
+    margin-top: 1%;
+}
+
+.one{
+    grid-row:1;
+    grid-column: 2 / span 3;
+}
+.two{
+    grid-row:2;
+    grid-column:1 / span 5;
+    align-self: center;
+}
+
+.grid-content img{
+    align-self: center;
+    justify-self: center;
+    border-radius: 10rem;
+    grid-column: 1;
+}
+
+.grid-content img:nth-child(1){
     grid-row: 1;
-    grid-column: 3 / span 2;
+}
+.grid-content img:nth-child(2){
+    grid-row: 3;
+}
+.grid-content img:nth-child(3){
+    grid-row: 4;
+}
+.grid-content > img:nth-child(4){
+    grid-row: 5;
+}
+.grid-content div:nth-last-child(3){
+    grid-row: 3;
+    grid-column: 2 / span 5;
+    align-self: center;
+}
+.grid-content div:nth-last-child(2){
+    grid-row: 4;
+    grid-column: 2 / span 5;
+    align-self: center;
+}
+.grid-content div:nth-last-child(1){
+    grid-row: 5;
+    grid-column: 2 / span 5;
+    align-self: center;
+}
+
+.social div:nth-child(1){
+    display: flex;
+    height: 20%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.social div:nth-child(2){
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.social div:nth-child(3){
+    background: url("../resources/media.jpg") no-repeat center;
+    background-size: cover;
+    width: 100%;
+    height: 30%;
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+}
+#paper{
+    box-shadow: -7px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: inherit;
 }
