--- a/main/main.css
+++ b/main/main.css
@@ -20,7 +20,7 @@ body{
 
 .wrapper {
     height: 100vh;
-    background: url("resources/background.jpg") no-repeat center;
+    background: url("../resources/background.jpg") no-repeat center;
     background-size: cover;
     width: 100%;
     display: flex;
